Deployment/Manifests/scylla-deployment.yaml
# Namespace where the Scylla Cluster will be created
apiVersion: v1
kind: Namespace
metadata:
  name: scylla
