Deployment/Manifests/sql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlpad
  namespace: cockroachdb
spec:
  selector:
    matchLabels:
      app: sqlpad
  template:
    metadata:
      labels:
        app: sqlpad
    spec:
      containers:
      - name: pegasus
        image: sqlpad/sqlpad
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
