Deployment/Manifests/Graphql.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: graphql
  labels:
    istio-injection: enabled
# ---

# apiVersion: v1
# data:
#   .dockerconfigjson: eyJhdXRocyI6eyJyZWdpc3RyeS5wYXRyaWNrYnVjay5uZXQiOnsidXNlcm5hbWUiOiJhZG1pbiIsInBhc3N3b3JkIjoiSGFyYm9yMTIzNDUiLCJlbWFpbCI6InBhcHB5YnVja0Bob3RtYWlsLmNvbSIsImF1dGgiOiJZV1J0YVc0NlNHRnlZbTl5TVRJek5EVT0ifX19
# kind: Secret
# metadata:
#   name: harborcred
#   namespace: graphql
# type: kubernetes.io/dockerconfigjson

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphql
  namespace: graphql
spec:
  selector:
    matchLabels:
      app: graphql
  template:
    metadata:
      labels:
        app: graphql
    spec:
      containers:
      - name: graphql
        image: registry.digitalocean.com/dancedanceregistry/graphql:latest
        # image: registry.patrickbuck.net/marketplace/graphql:latest
        # image:  dev-registry:5000/graphql
        # image: localhost:32000/graphql
        # image: pappybuck/graphql-local
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 4000
      imagePullSecrets:
        # - name: harborcred
        - name: dancedanceregistry

---

apiVersion: v1
kind: Service
metadata:
  name: graphql-service
  namespace: graphql
spec:
  selector:
    app: graphql
  ports:
  - port: 80
    targetPort: 4000
  type: ClusterIP

---
