Deployment/Manifests/Janus.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth
  labels:
    istio-injection: enabled
# ---

# apiVersion: v1
# data:
#   .dockerconfigjson: eyJhdXRocyI6eyJyZWdpc3RyeS5wYXRyaWNrYnVjay5uZXQiOnsidXNlcm5hbWUiOiJhZG1pbiIsInBhc3N3b3JkIjoiSGFyYm9yMTIzNDUiLCJlbWFpbCI6InBhcHB5YnVja0Bob3RtYWlsLmNvbSIsImF1dGgiOiJZV1J0YVc0NlNHRnlZbTl5TVRJek5EVT0ifX19
# kind: Secret
# metadata:
#   name: harborcred
#   namespace: auth
# type: kubernetes.io/dockerconfigjson

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: janus
  namespace: auth
spec:
  selector:
    matchLabels:
      app: janus
  template:
    metadata:
      labels:
        app: janus
    spec:
      containers:
      - name: janus
        # image:  dev-registry:5000/janus
        # image: registry.patrickbuck.net/marketplace/janus:latest
        image: registry.digitalocean.com/dancedanceregistry/janus:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      imagePullSecrets:
        # - name: harborcred
        - name: dancedanceregistry

---

apiVersion: v1
kind: Service
metadata:
  name: janus-service
  namespace: auth
spec:
  selector:
    app: janus
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP

---
