Deployment/Manifests/Nextjs.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    istio-injection: enabled
# ---

# apiVersion: v1
# data:
#   .dockerconfigjson: eyJhdXRocyI6eyJyZWdpc3RyeS5wYXRyaWNrYnVjay5uZXQiOnsidXNlcm5hbWUiOiJhZG1pbiIsInBhc3N3b3JkIjoiSGFyYm9yMTIzNDUiLCJlbWFpbCI6InBhcHB5YnVja0Bob3RtYWlsLmNvbSIsImF1dGgiOiJZV1J0YVc0NlNHRnlZbTl5TVRJek5EVT0ifX19
# kind: Secret
# metadata:
#   name: harborcred
#   namespace: frontend
# type: kubernetes.io/dockerconfigjson

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs
  namespace: frontend
spec:
  selector:
    matchLabels:
      app: nextjs
  replicas: 2
  template:
    metadata:
      labels:
        app: nextjs
    spec:
      containers:
      - name: nextjs
        # image: dev-registry:5000/nextjs
        # image: registry.patrickbuck.net/marketplace/nextjs:latest
        image: registry.digitalocean.com/dancedanceregistry/nextjs:latest
        # image: pappybuck/nextjs-local
        # imagePullPolicy: IfNotPresent
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
        - mountPath: /.next/server/pages/
          name: nextjs-cache
        ports:
        - containerPort: 3000
      imagePullSecrets:
        # - name: harborcred
        - name: dancedanceregistry
      volumes:
      - name: nextjs-cache
        emptyDir: {}
---

apiVersion: v1
kind: Service
metadata:
  name: nextjs-service
  namespace: frontend
spec:
  selector:
    app: nextjs
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
