Deployment/Manifests/Pegasus.yaml
# apiVersion: v1
# data:
#   .dockerconfigjson: eyJhdXRocyI6eyJyZWdpc3RyeS5wYXRyaWNrYnVjay5uZXQiOnsidXNlcm5hbWUiOiJhZG1pbiIsInBhc3N3b3JkIjoiSGFyYm9yMTIzNDUiLCJlbWFpbCI6InBhcHB5YnVja0Bob3RtYWlsLmNvbSIsImF1dGgiOiJZV1J0YVc0NlNHRnlZbTl5TVRJek5EVT0ifX19
# kind: Secret
# metadata:
#   name: harborcred
#   namespace: auth
# type: kubernetes.io/dockerconfigjson

# ---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pegasus
  namespace: auth
spec:
  selector:
    matchLabels:
      app: pegasus
  template:
    metadata:
      labels:
        app: pegasus
    spec:
      containers:
      - name: pegasus
        # image:  dev-registry:5000/pegasus
        # image: registry.patrickbuck.net/marketplace/pegasus:latest
        image: registry.digitalocean.com/dancedanceregistry/pegasus:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
      imagePullSecrets:
        # - name: harborcred
        - name: dancedanceregistry
---

apiVersion: v1
kind: Service
metadata:
  name: pegasus-service
  namespace: auth
spec:
  selector:
    app: pegasus
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP

---
