Deployment/Manifests/nginx-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-nginx
  namespace: nginx
spec:
  type: ExternalName
  externalName: nextjs-service.frontend.svc.cluster.local
  ports:
    - port: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx
  annotations:
    cert-manager.io/cluster-issuer: nginx-issuer
spec:
  ingressClassName: nginx
  tls:
  - secretName: patrickbuck-net-tls
    hosts:
    - patrickbuck.net
  rules:
  - host: "patrickbuck.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextjs-nginx
            port:
              number: 80
