Deployment/Manifests/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://janus-service.auth.svc.cluster.local/auth/verify?roles=Admin"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: "prometheus.patrickbuck.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-server
            port:
              number: 80
